Recoded the way keys are implemented. Added a new polygon shape to deal with unique key shapes